# SOMEIP-Platform-Comparisons

./: README.md  example  main.cpp
Vehicle_Simulator_Dashboard/Dashboard/: Makefile
Vehicle_Simulator_Dashboard/Dashboard/config/: dashboard.json
Vehicle_Simulator_Dashboard/Dashboard/include/: dashboard.hpp  someip_dashboard_communicator.hpp
Vehicle_Simulator_Dashboard/VehicleSimulator/: Makefile  README.md
basic_test/: README.md
basic_test/src/: client.cpp  service.cpp
basic_test_request_response/: CMakeLists.txt
basic_test_request_response/src/: client.cpp
basic_test_subscribe_notify/config/: helloworld-local.json
basic_test_subscribe_notify/src/: client.cpp  service.cpp
laptop/: Makefile  README.md  install.sh
laptop/include/: hello_world_client.hpp
laptop/src/: hello_world_client_main.cpp  hello_world_service_main.cpp
laptop2/: Makefile
laptop2/config/: HelloWorld.fdepl
laptop2/include/: HelloWorld.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldStub.hpp  hello_world_client.hpp  hello_world_service.hpp
laptop2/src/: HelloWorldService.cpp
raspberry-pi/: README.md
simple_vehicle/: Makefile  install.sh
simple_vehicle/config/: helloworld-local.json
simple_vehicle/include/: speed_client.hpp  speed_service.hpp
simple_vehicle/src/: client_main.cpp  service_main.cpp
stm32/: README.md
subscribe_notify_speed/: CMakeLists.txt  README.md
subscribe_notify_speed/config/: speed-local.json
subscribe_notify_speed/include/: client.hpp  service.hpp
subscribe_notify_speed/src/: client.cpp  service.cpp
(+11 files in other folders)
